# dolphin

./: CMakeLists.txt
Source/: CMakeLists.txt
Source/Core/Common/: CMakeLists.txt  FilesystemWatcherStub.cpp  GenericCPUDetect.cpp  MemoryUtil.cpp  Thread.cpp  Timer.cpp  WindowSystemInfo.h
Source/Core/Core/: CMakeLists.txt  NetPlayClient.h  NetPlayStub.cpp
Source/Core/Core/HW/DVD/: AMMediaboardStub.cpp
Source/Core/Core/HW/EXI/: EXI_Device.cpp
Source/Core/Core/HW/SI/: SI.cpp  SI_Device.cpp
Source/Core/Core/HW/Triforce/: ICCardReader.cpp  ICCardReader.h
Source/Core/Core/HW/WiimoteReal/: WiimoteReal.cpp
Source/Core/Core/IOS/Network/: Socket.h
Source/Core/Core/PowerPC/CachedInterpreter/: CachedInterpreter.cpp
Source/Core/InputCommon/: CMakeLists.txt  GCAdapter.cpp
Source/Core/InputCommon/ControllerInterface/: ControllerInterface.h
Source/Core/VideoBackends/: CMakeLists.txt
Source/Core/VideoBackends/Software/: CMakeLists.txt  SWEfbInterface.cpp  SWGfx.cpp  SWOGLWindow.cpp  SWOGLWindow.h  SWVertexLoader.cpp
Source/Core/VideoBackends/WebGL/: CMakeLists.txt  VideoBackend.cpp  VideoBackend.h  WebGLContext.cpp  WebGLContext.h  WebGLGfx.cpp  WebGLGfx.h  WebGLPipeline.cpp  WebGLPipeline.h  WebGLShader.cpp  WebGLShader.h  WebGLTexture.cpp  WebGLTexture.h  WebGLVertexFormat.cpp  WebGLVertexFormat.h  WebGLVertexManager.cpp  WebGLVertexManager.h
Source/Core/VideoCommon/: CMakeLists.txt  DriverDetails.cpp  NetPlayUIStub.cpp  Present.cpp  VideoBackendBase.cpp  WebPerfMetrics.cpp  WebPerfMetrics.h
Source/Web/: .gitignore  CMakeLists.txt  PERFORMANCE_ROADMAP.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
Source/Web/core/: dolphin_web_core.cpp  dolphin_web_host.cpp  dolphin_web_stub.cpp
Source/Web/public/: _headers
Source/Web/scripts/: copy-dolphin-core.mjs
Source/Web/src/: App.tsx  main.tsx  styles.css
Source/Web/src/lib/: browserApiTypes.ts  capabilities.ts  discTypes.ts  discWorkerClient.ts  format.ts
Source/Web/src/workers/: discReader.worker.ts
